Fix rendering of the text with relative offsets

1) Relative offsets were calculated incorrectly: null offsets should
   not repeat itself, but define a new noop offset, which will
   be handled on a lower level

2) Workaround QTextLayout "weirdness" that makes it skip the space
   characters and not include them into "horizontal advance" of the
   text chunk

BUG:391160